--- a/SGD.ipynb
+++ b/SGD.ipynb
@@ -1,18 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "40de0dbb",
+   "metadata": {},
+   "source": [
+    "# SGD and Momentum Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6d5e122d",
+   "id": "9b53ff9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
     "seed = 42\n",
     "np.random.seed(42)\n",
     "matplotlib.rcParams.update({'font.size': 14})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed234627",
+   "metadata": {},
+   "source": [
+    "## Data"
    ]
   },
   {
@@ -65,6 +82,14 @@
     "    else:\n",
     "        #plt.imshow(loss.reshape(dx,dx),cmap=plt.cm.jet,interpolation='bilinear')\n",
     "        plt.contourf(x,y,loss.reshape(dx,dx),cmap=plt.cm.Reds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95d6f656",
+   "metadata": {},
+   "source": [
+    "## Gradient Descent Algorithms"
    ]
   },
   {
@@ -133,6 +158,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3617a0d8",
+   "metadata": {},
+   "source": [
+    "## Example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "52497f06",
@@ -195,9 +228,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0be9ff8d",
+   "metadata": {},
+   "source": [
+    "## Creating ReadMe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6c51e051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%javascript\n",
+    "IPython.notebook.save_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cf643ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.system('rm SGD_files/*')\n",
+    "os.system('jupyter nbconvert --to markdown SGD.ipynb')\n",
+    "os.system('mv SGD.md README.md')\n",
+    "os.system('git add SGD_files/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85151615",
    "metadata": {},
    "outputs": [],
    "source": []
