--- a/SGD.ipynb
+++ b/SGD.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "40de0dbb",
+   "id": "babd7469",
    "metadata": {},
    "source": [
     "# SGD and Momentum Example"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "9b53ff9b",
+   "id": "94c34777",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed234627",
+   "id": "96256eea",
    "metadata": {},
    "source": [
     "## Data"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95d6f656",
+   "id": "e69e035c",
    "metadata": {},
    "source": [
     "## Gradient Descent Algorithms"
@@ -145,7 +145,7 @@
     "        inp, truth = inp_full[idx], truth_full[idx]\n",
     "        pred = f(inp,w)\n",
     "        diff = (pred - truth)\n",
-    "        loss = (0.5*diff**2).mean(0)\n",
+    "        loss = (diff**2).mean(0)\n",
     "        grad = np.mean(0.5*diff*f_grad(inp,w)[0],0)\n",
     "        \n",
     "        ema = beta * ema + (1-beta)*grad.reshape(-1,1)\n",
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3617a0d8",
+   "id": "94715046",
    "metadata": {},
    "source": [
     "## Example"
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be9ff8d",
+   "id": "fd988350",
    "metadata": {},
    "source": [
     "## Creating ReadMe"
@@ -249,7 +249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cf643ba",
+   "id": "74b9594c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85151615",
+   "id": "8554f696",
    "metadata": {},
    "outputs": [],
    "source": []
