Image not loading

--- a/SGD.ipynb
+++ b/SGD.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "441f3554",
+   "id": "73316b99",
    "metadata": {},
    "source": [
     "# SGD and Momentum Example\n",
-    "![](./Result.png)"
+    "![intro](./Result.png)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6d65b842",
+   "id": "0862d5e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f090783",
+   "id": "9631cfc9",
    "metadata": {},
    "source": [
     "## Data"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98e2862e",
+   "id": "9e19713f",
    "metadata": {},
    "source": [
     "## Gradient Descent Algorithms"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff1f704b",
+   "id": "ff9d2135",
    "metadata": {},
    "source": [
     "## Example"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ed9374",
+   "id": "79f3cd5c",
    "metadata": {},
    "source": [
     "## Creating ReadMe"
@@ -230,10 +230,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6c51e051",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.save_notebook()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "IPython.notebook.save_notebook()"
@@ -241,10 +254,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d13886eb",
+   "execution_count": 7,
+   "id": "a04624e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook SGD.ipynb to markdown\n",
+      "[NbConvertApp] Support files will be in SGD_files/\n",
+      "[NbConvertApp] Making directory SGD_files\n",
+      "[NbConvertApp] Writing 4949 bytes to SGD.md\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "os.system('rm SGD_files/*')\n",
     "os.system('jupyter nbconvert --to markdown SGD.ipynb')\n",
@@ -255,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81e346d7",
+   "id": "9ad499a2",
    "metadata": {},
    "outputs": [],
    "source": []
