--- a/SGD.ipynb
+++ b/SGD.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "73316b99",
+   "id": "6fc9de2b",
    "metadata": {},
    "source": [
     "# SGD and Momentum Example\n",
-    "![intro](./Result.png)"
+    "![intro](./Result.jpg)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0862d5e3",
+   "id": "c24fe274",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9631cfc9",
+   "id": "729adb25",
    "metadata": {},
    "source": [
     "## Data"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e19713f",
+   "id": "b623a201",
    "metadata": {},
    "source": [
     "## Gradient Descent Algorithms"
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff9d2135",
+   "id": "7179feff",
    "metadata": {},
    "source": [
     "## Example"
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79f3cd5c",
+   "id": "3e1c6022",
    "metadata": {},
    "source": [
     "## Creating ReadMe"
@@ -230,23 +230,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "6c51e051",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.save_notebook()\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "IPython.notebook.save_notebook()"
@@ -254,31 +241,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a04624e0",
+   "execution_count": null,
+   "id": "99f5db93",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook SGD.ipynb to markdown\n",
-      "[NbConvertApp] Support files will be in SGD_files/\n",
-      "[NbConvertApp] Making directory SGD_files\n",
-      "[NbConvertApp] Writing 4949 bytes to SGD.md\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('rm SGD_files/*')\n",
     "os.system('jupyter nbconvert --to markdown SGD.ipynb')\n",
@@ -289,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ad499a2",
+   "id": "274f6b7b",
    "metadata": {},
    "outputs": [],
    "source": []
